# chromium_src

./: 0001-Fix-video-rendering-for-Tegra-2-on-Android.patch  0001-chromium-src-build-fixes-for-non-NEON.patch  0002-Disable-VP9-codec.patch  0002-Fix-video-rendering-for-Tegra-2-on-Android.patch  0003-Disable-VP9-codec.patch  0003-Disable-out-of-process-rasterization.patch  0003-tegra2-and-tegra3-have-a-2k-x-2k-max-texture-size.patch  0003-thirdparty-libvpx-Fix-arm-neon-cpu-detect.patch  0004-Disable-out-of-process-rasterization.patch  0004-skia-Gaurd-neon-code-with-arm-use-neon-flags.patch  0004-tegra2-and-tegra3-have-a-2k-x-2k-max-texture-size.patch  0004-thirdparty-libvpx-Fix-arm-neon-cpu-detect.patch  README.md  args.gn
